# Terminal-LLM

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Chat.py  README.md  README_EN.md  __init__.py  chat_cache.json  chat_history.json  commands.py  config.py  pyproject.toml  readme.md  requirements.txt  run.py  setup.py  shell_ai.py  test.py  test_conversation.py  test_prompt.py  ui.py  utils.py
contribution/: CONTRIBUTING_CN.md
data/cache/: chat_cache.json
data/history/: chat_history.json
data/prompts/base/: claude_template.txt  system.txt
data/prompts/scene/: coding.txt
data/vectorstore/: chunks.json  index.faiss
docs/: README.md  README_CN.md
docs/changelog/: CHANGELOG.md  CHANGELOG_CN.md
src/: cli.py
src/config/: __init__.py  config.py  languages.py
src/core/: __init__.py  chat.py  commands.py  exceptions.py  model_adapter.py  prompt_manager.py  shell_ai.py  utils.py
src/core/commands/: __init__.py  base.py  basic_commands.py  history_commands.py  knowledge_commands.py
src/data/: __init__.py  cache_manager.py  python_tutorial.txt
src/knowledge/: __init__.py  document.py  vectorstore.py
src/ui/: __init__.py  ui.py
test_data/: sample.txt
tests/: test_cache_manager.py  test_chat.py  test_commands.py  test_prompts.py  test_utils.py
